--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 body {
   background-color: rgba(255, 255, 255, 0.886);
 }
@@ -71,7 +70,7 @@ margin-bottom: -15%;
 
 
 a:hover {
-  color: rgb(44, 44, 219);
+  color: rgb(82, 195, 232);
 }
 
 
@@ -95,6 +94,11 @@ h1.name2 {
 
 }
 
+h1.name:hover , h1.name2:hover {
+  transform: translateY(-5px);
+  transition: 0.3s;
+}
+
 .shortbio {
   font-family: "San Francisco", sans-serif;
   text-align: left;
@@ -109,48 +113,32 @@ h1.name2 {
   position: absolute;
   max-width: 600px;
   height: auto;
-  /* margin-right: 5%;
-  margin-top: -350px;
-  float: right; */
-  /* top: 0;
-  right: 0; */
   transform: translate(120%, -60%);
  
 }
 
+
 .btn {
   position: relative;
-  font-size: 20px;
+  font-size: 21px;
   padding: 20px;
   left: 340px;
   top: 60px;
-  background-color: rgb(82, 195, 232);
   border-radius: 30px;
-  color: rgb(255, 255, 255);
   font-family: "San Francisco", sans-serif;
   text-align: left;
+
 
 }
 
 .btn:hover {
-  background-color: rgb(255, 255, 255);
-  color: rgb(82, 195, 232);
+  color: rgb(255, 255, 255);
 }
 
 
 
 
-/* .image-info {
-  display: block;
-  width: 300px;
-  border: 2px solid #ccc;
-  border-radius: 4px;
-  box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.3);
-  margin-top: 25%;
-  margin-left: 14%;
-  float: left;
 
-} */
 
 
 .image-info {
@@ -170,29 +158,38 @@ left: 150px;
   border-radius: 20px;
 }
 
+.image-info:hover{
+  transform: translateY(-15px);
+  transition: 0.3s;
+  
+}
 
 
 
 
 
 
-button {
+ button {
   cursor: pointer;
   padding: 10px 12px;
-  background: skyblue;
-  background-image: linear-gradient(to right, #171416e9, #700000);
-
+  color: #333;
+  background-color: #ffffff;
+  box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.3);
   border: none;
   border-radius: 4px;
-  color: white;
+  color: rgb(9, 9, 9);
   font-size: 12px;
   position: relative;
   z-index: 999;
-}
+} 
 
 button:hover {
-  background: #0077b6;
-}
+  background-image: linear-gradient(to right, #868F96 , #596164);
+  color: #fff;
+  transform: translateY(-5px);
+  transition: 0.3s;
+  
+} 
 
 
 
@@ -201,11 +198,10 @@ button:hover {
   grid-gap: 2em;
   width: 400px;
   grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
-  /* transform: translate(140%, -800%); */
   position: relative;
   top: 120px;
   left: 550px;
-  /* margin-bottom: -10%; */
+
 
 }
 
@@ -215,7 +211,11 @@ button:hover {
 .exp {
   position: grid;
   cursor: pointer;
+  color: black;
+
 }
+
+
 
 .abt-text,
 .skl-text,
@@ -257,11 +257,14 @@ button:hover {
   /* justify-content: space-between; */
 }
 
+
+
 .container div {
  
-  color: #ffffff;
   padding: 5px;
-  background-image: linear-gradient(to right, #171416e9, #700000);
+  border: 2px solid #ccc;
+  border-radius: 20px;
+  box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.3);
   text-align: center;
   margin-top: 4%;
  
@@ -276,6 +279,10 @@ button:hover {
 
 }
 
+.container div:hover {
+  transform: translateY(-15px);
+  transition: 0.3s;
+}
 /* copied */
 form {
   width: 50%;
@@ -315,7 +322,8 @@ textarea {
   right: 10px;
   padding: 10px;
   border-radius: 5px;
-  background-image: linear-gradient(to right, #171416e9, #700000);
+  background-image: linear-gradient(to right,#3E5151 , #DECBA4);
+
 
   color: #fff;
 }
@@ -327,7 +335,8 @@ textarea {
 
 footer {
   margin-top: 5%;
-  background: #000000;
+  background-image: linear-gradient(to right,#081425 , #42431f);
+
   color: #fff;
   text-align: center; /* Center the content within the footer */
   padding: 2rem 0; /* Adjust padding as needed */
@@ -362,3 +371,111 @@ footer img {
 .footer-copyright {
   margin-top: 2rem;
 }
+
+
+
+@media (max-width: 768px) {
+  .header {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .both-logos {
+    margin-bottom: -120px; /* Add margin between logos and navigation for small screens */
+  }
+
+  .nav {
+    flex-direction: row; /* Display links in a row for small screens */
+    justify-content: center; /* Align links to the left for small screens */
+    width: 100%; /* Ensure the links span the full width of the header */
+    padding: 10px 0; /* Add padding to the links for spacing */
+    transform: translate(10%, -20%);
+  }
+
+  h1.name , h1.name2{
+    width: 30px;
+    font-size: 30px;
+    transform: translateY(-5px);
+    transition: 0.3s;
+  }
+  
+  .shortbio {
+    font-family: "San Francisco", sans-serif;
+    text-align: left;
+    width: 250px;
+    margin-left: 10%;
+    margin-top: 2.5%;
+    font-size: 16px;
+    position: relative;
+    left: 0;
+    z-index: 999;
+  
+  }
+  
+.pic {
+  position: absolute;
+  max-width: 400px;
+  height: auto;
+  transform: translate(50%, -60%);
+ 
+}
+
+
+.btn {
+  position: relative;
+  font-size: 21px;
+  padding: 20px;
+  left: 60px;
+  top: 60px;
+  border-radius: 30px;
+  font-family: "San Francisco", sans-serif;
+  text-align: left;
+}
+
+
+.image-info {
+    position: relative;
+    left: 10px;
+    width: 220px;
+    height: auto;
+    z-index: 999;
+
+}
+
+
+.buttons-container {
+
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(100px, 0.1em));
+  grid-gap: 0.5em;
+  width: 400px;
+  position: relative;
+  top: 180px;
+  left: 250px;
+
+}
+
+
+.serv {
+  display: flex;
+  position: relative;
+  font-family: "San Francisco", sans-serif;
+  text-align: center;
+  font-size: 18px;
+  top: 470px;
+  /* left: 400px; */
+  margin-left: 0%;
+
+
+}
+
+#contact-form{
+  position: relative;
+  top: 600px;
+/* float: left; */
+left: 8em;
+}
+
+}
+
+
