--- a/about.css
+++ b/about.css
@@ -1,5 +1,6 @@
 body {
   background-color: rgba(255, 255, 255, 0.886);
+  overflow-x: hidden;
 }
 
 
@@ -245,7 +246,14 @@ img {
   transform: translateY(-290%);
 
 }
-
+.hobby3 {
+  text-align: center;
+  margin-bottom: 1rem;
+  font-family: "San Francisco", sans-serif;
+  color: rgb(0, 0, 0);
+  transition: 0.3s;
+  cursor: pointer;
+}
 .img3 {
     position: relative;
     margin-top: -28%;
@@ -255,25 +263,17 @@ img {
     cursor: pointer;
     height: 500px;
     width: auto;
-    left: 780px;
+    left: 750px;
   transform: translateY(-190%);
 }
 
 
 
-.hobby3 {
-    text-align: center;
-    margin-bottom: 1rem;
-    font-family: "San Francisco", sans-serif;
-    color: rgb(0, 0, 0);
-    transition: 0.3s;
-    cursor: pointer;
-}
+
 
 footer {
   margin-top: -95%;
   background-image: linear-gradient(to right,#081425 , #42431f);
-
   color: #fff;
   text-align: center; /* Center the content within the footer */
   padding: 2rem 0; /* Adjust padding as needed */
@@ -311,21 +311,166 @@ footer img {
 
   
 
+
+@media (max-width: 1024px) {
+
+  .about-section{
+    max-width: 55em , 60em;
+    padding: 0;
+    margin: 0%;
+  }
+
+
+.hobbies {
+  position: relative;
+  max-width: 360px;
+  font-size: 1rem;
+height: 220px;
+z-index: 999;
+}
+
+
+
+.img1 {
+  position: relative;
+left: -5rem;
+top: 80px;
+width: 500px;
+height: auto;
+margin-top: -10%;
+}
+
+
+.img2 {
+  position: relative;
+  left: 5px;
+  top: -5em;
+  width: 440px;
+  height: auto;
+  z-index: -1;
+  }
+
+  .hobbies2{
+    position: relative;
+    width: 320px;
+    height: 220px;
+    z-index: 999;
+    left: 30em;
+    top: 2em;
+  }
+
+  
+  
+    .hobbies3{
+      position: relative;
+      width: 400px;
+      height: 220px;
+      z-index: 999;
+      right: 0;
+      top: -2em;
+    }
+
+    .img3 {
+      position: relative;
+      left: 30em;
+      top: -12em;
+      width: 450px;
+      height: 300px;
+      z-index: -1;
+ margin-bottom: -13em;
+      }
+
+
+}
+
+@media (max-width: 880px) {
+
+  .about-section{
+    max-width: 55em , 60em;
+    padding: 0;
+    margin: 0%;
+  }
+
+
+.hobbies {
+  position: relative;
+  max-width: 330px;
+  font-size: 1rem;
+height: 220px;
+z-index: 999;
+transition: o.3s;
+}
+
+
+
+.img1 {
+  position: relative;
+left: -1rem;
+top: 50px;
+width: 400px;
+height: auto;
+margin-top: -11%;
+}
+
+
+.img2 {
+  position: relative;
+  left: 5px;
+  top: -7em;
+  width: 390px;
+  height: auto;
+  z-index: -1;
+  }
+
+  .hobbies2{
+    position: relative;
+    width: 280px;
+    height: 220px;
+    z-index: 999;
+    left: 28em;
+    top: 2em;
+  }
+
+  
+  
+    .hobbies3{
+      position: relative;
+      width: 350px;
+      height: 220px;
+      z-index: 999;
+      right: 0;
+      top: 0em;
+    }
+
+    .img3 {
+      position: relative;
+      left: 25em;
+      top: -22.5em;
+      width: 400px;
+      height: 300px;
+      z-index: -1;
+      }
+
+
+}
+
   @media (max-width: 768px) {
+
+    
     .header {
       flex-direction: column;
       align-items: flex-start;
     }
   
     .both-logos {
-      margin-bottom: -120px; /* Add margin between logos and navigation for small screens */
+      margin-bottom: -120px; 
     }
   
     .nav {
-      flex-direction: row; /* Display links in a row for small screens */
-      justify-content: center; /* Align links to the left for small screens */
-      width: 100%; /* Ensure the links span the full width of the header */
-      padding: 10px 0; /* Add padding to the links for spacing */
+      flex-direction: row; 
+      justify-content: center; 
+      width: 100%; 
+      padding: 10px 0; 
       transform: translate(10%, -20%);
     }
   
@@ -399,9 +544,9 @@ z-index: 999;
 
 .img1 {
 position: relative;
-left: 20px;
-top: 300px;
-width: 400px;
+left: -7em;
+top: 320px;
+width: 350px;
 height: 300px;
 z-index: -1;
 margin-top: -7%;
@@ -412,7 +557,7 @@ margin-top: -7%;
   position: relative;
   left: 5px;
   top: 150px;
-  width: 440px;
+  width: 400px;
   height: 300px;
   z-index: -1;
   margin-top: 0;
@@ -420,19 +565,18 @@ margin-top: -7%;
 
   .hobbies2{
     position: relative;
-    width: 320px;
+    width: 350px;
     height: 220px;
     z-index: 999;
-    left: 150px;
+    left: 15em;
     top: 550px;
-    /* transform: translate(50%,-150%); */
   }
 
   
   
     .hobbies3{
       position: relative;
-      width: 400px;
+      width: 300px;
       height: 220px;
       z-index: 999;
       right: 0;
@@ -440,17 +584,240 @@ margin-top: -7%;
     }
 
     .img3 {
-      /* Your image styles here */
       position: relative;
-      left: 170px;
-      top: 450px;
-      width: 400px;
+      left: 16em;
+      top: 530px;
+      width: 350px;
       height: 300px;
       z-index: -1;
- 
+ margin-bottom: 15%;
       }
 
   }
   
   
+  @media (max-width: 655px) {
+
+    .img1{
+      left: -10em;
+    }
+    .hobbies2{
+      left: 8em;
+      transition: 0.3s;
+    }
+
+    .img3{
+      left: 10em;
+    }
+  }
+
+  @media (max-width: 558px) {
+
+body{
+  overflow-x: hidden;
+  transition: 0.3s;
+}
+
+    .hobbies {
+      position: relative;
+      width: 250px;
+    height: 200px;
+    z-index: 999;
+    }
+    
+    
+    
+    .img1 {
+    position: relative;
+    left: -10em;
+    top: 14em;
+    width: 300px;
+    height: auto;
+    z-index: -1;
+    margin-top: -7%;
+    }
+    
+    
+    .img2 {
+      position: relative;
+      left: 5px;
+      top: 0em;
+      width: 320px;
+      height: auto;
+      z-index: -1;
+      margin-top: 0;
+      }
+    
+      .hobbies2{
+        position: relative;
+        width: 250px;
+        height: 220px;
+        z-index: 999;
+        left: 10em;
+        top: 470px;
+      }
+    
+      
+      
+        .hobbies3{
+          position: relative;
+          width: 250px;
+          height: 210px;
+          z-index: 999;
+          right: 0;
+          top: 420px;
+        }
+    
+        .img3 {
+          position: relative;
+          left: 6em;
+          top: 310px;
+          width: 320px;
+          height: auto;
+          z-index: -1;
+     margin-bottom: 15%;
+          }
+    
+
+  }
+
+  @media (max-width: 490px) {
+
+    .hobbies2{
+      position: relative;
+      width: 250px;
+      height: 220px;
+      z-index: 999;
+      left: 6em;
+      top: 470px;
+    }
+
+    
+    .img3 {
+      position: relative;
+      left: 4.5em;
+      top: 310px;
+      width: 320px;
+      height: auto;
+      z-index: -1;
+ margin-bottom: 0%;
+      }
+
+
+  }
+
+  @media (max-width: 490px) {
+    
+    .hobbies2{
+      position: relative;
+      width: 250px;
+      height: 220px;
+      z-index: 999;
+      left: 6em;
+      top: 470px;
+    }
+
+    
+    .img3 {
+      position: relative;
+      left: 4.5em;
+      top: 310px;
+      width: 320px;
+      height: auto;
+      z-index: -1;
+ margin-bottom: 0%;
+      }
+
+    }    
+
+
+  @media (max-width: 450px) {
+
+       
+    .header {
+      flex-direction: column;
+      align-items: flex-start;
+    }
   
+    .both-logos {
+      margin-bottom: -120px;
+      size: -20%; 
+    }
+  
+    .nav {
+      flex-direction: row; 
+      justify-content: center; 
+      width: 100%; 
+      padding: 10px 0; 
+      transform: translate(0%, -20%);
+    }
+  
+    body{
+      overflow-x: hidden;
+      transition: 0.3s;
+    }
+    
+        .hobbies {
+          position: relative;
+          width: 250px;
+        height: 200px;
+        z-index: 999;
+        }
+        
+        
+        
+        .img1 {
+        position: relative;
+        left: -10em;
+        top: 14em;
+        width: 300px;
+        height: auto;
+        z-index: -1;
+        margin-top: -7%;
+        }
+        
+        
+        .img2 {
+          position: relative;
+          left: 5px;
+          top: 0em;
+          width: 320px;
+          height: auto;
+          z-index: -1;
+          margin-top: 0;
+          }
+        
+          .hobbies2{
+            position: relative;
+            width: 250px;
+            height: 220px;
+            z-index: 999;
+            left: 4em;
+            top: 470px;
+          }
+        
+          
+          
+            .hobbies3{
+              position: relative;
+              width: 250px;
+              height: 210px;
+              z-index: 999;
+              right: 0;
+              top: 420px;
+            }
+        
+            .img3 {
+              position: relative;
+              left: 2em;
+              top: 280px;
+              width: 320px;
+              height: auto;
+              z-index: -1;
+         margin-bottom: 0%;
+              }
+        
+    
+      }
+    
+     
