--- a/cv.css
+++ b/cv.css
@@ -9,7 +9,7 @@ body {
   left: 0;
   display: flex;
   align-items: center; /* Vertically align the logo and text */
-  margin-left: 6%;
+  margin-left: 0%;
   
 }
 
@@ -331,6 +331,15 @@ footer img {
 
   .both-logos {
     margin-bottom: -120px; /* Add margin between logos and navigation for small screens */
+    align-items: center;
+    transition: 0.3s;
+  }
+
+  .mylogo {
+    width: 220px;
+    height: auto;
+    z-index: 999;
+    margin-top: -3%;
   }
 
   .nav {
@@ -445,3 +454,5 @@ img {
   margin-left: 12%;
 }
 }
+
+
