--- a/style.css
+++ b/style.css
@@ -234,6 +234,8 @@ button:hover {
   display: block;
 }
 
+
+
 .serv {
   display: flex;
   position: relative;
@@ -283,7 +285,7 @@ button:hover {
   transform: translateY(-15px);
   transition: 0.3s;
 }
-/* copied */
+
 form {
   width: 50%;
   position:   relative;
@@ -372,6 +374,174 @@ footer img {
   margin-top: 2rem;
 }
 
+
+
+
+/* xl */
+@media (max-width: 1245px) {
+  .both-logos {
+    margin-bottom: -180px; /* Add margin between logos and navigation for small screens */
+  }
+
+  .nav {
+    flex-direction: row; /* Display links in a row for small screens */
+    justify-content: center; /* Align links to the left for small screens */
+    width: 80%; /* Ensure the links span the full width of the header */
+    padding: 10px 0; /* Add padding to the links for spacing */
+    transform: translate(10%, -20%);
+  }
+
+  .pic{
+    width: 450px;
+    left: 70px;
+  }
+}
+
+@media (max-width: 1024px) {
+
+  .header {
+    padding: 20px; /* Increase header padding */
+  }
+
+  .nav {
+    font-size: 18px; /* Bump up nav font size */
+  }
+
+  .footer {
+    padding: 60px 0; /* Increase footer padding */ 
+  }
+  
+  .footer-links a {
+    margin: 0 1.5rem; /* Increase space between footer links */
+  }
+
+  .personalinfo {
+    font-size: 24px; /* Make personal info heading larger */
+  }
+
+  .container {
+    width: 500px; /* Widen container */
+  }
+
+}
+
+@media (max-width: 1028px) {
+
+  .serv{
+    margin-left: 2%;
+  }
+.container {
+  display: grid;
+  grid-gap: 2.2em;
+  grid-template-columns: repeat(3, minmax(250px, 100px));
+  position: relative;
+  top: 500px;
+  left: 90px;
+  /* justify-content: space-between; */
+}
+footer{
+  width: 130%;
+  left: -1em;
+}
+}
+
+/* sm */
+@media (max-width: 998px) {
+ 
+  .pic{
+    width: 400px;
+    left: 0px;
+    transition: 0.3s;
+
+  }
+
+  h1.name , h1.name2{
+    width: 30px;
+    font-size: 45px;
+    transform: translateY(0px);
+    transition: 0.3s;
+  }
+
+  .shortbio{
+    font-size: 20px;
+    transition: 0.3s;
+    width: 50%;
+  }
+
+ 
+.image-info {
+  position: relative;
+  left: 05px;
+  width: 220px;
+  height: auto;
+  z-index: 999;
+transition: 0.3s;
+}
+
+
+.buttons-container {
+
+display: grid;
+grid-template-columns: repeat(auto-fit, minmax(100px, 0.1em));
+grid-gap: 2.5em;
+width: 400px;
+position: relative;
+top: 180px;
+left: 250px;
+
+}
+
+
+.serv {
+  display: flex;
+  position: relative;
+  font-family: "San Francisco", sans-serif;
+  text-align: center;
+  font-size: 18px;
+  top: 470px;
+  justify-content: center;
+  /* left: 400px; */
+  margin-left: -2%;
+
+
+}
+
+
+.container {
+  display: grid;
+  grid-gap: 2.2em;
+  grid-template-columns: repeat(3, minmax(230px, 80px));
+  position: relative;
+  top: 500px;
+  left: 90px;
+  /* justify-content: space-between; */
+}
+
+footer{
+  width: 130%;
+  left: -1em;
+}
+
+
+}
+
+@media (max-width: 855px) {
+  .container {
+    display: grid;
+    grid-gap: 2.2em;
+    grid-template-columns: repeat(auto-fit, minmax(230px, 80px));
+    position: relative;
+    width: 90%;
+    top: 500px;
+    left: 179px;
+    /* justify-content: space-between; */
+  }
+
+  footer{
+    width: 130%;
+    left: -1em;
+  }
+}
 
 
 @media (max-width: 768px) {
@@ -476,6 +646,231 @@ footer img {
 left: 8em;
 }
 
+footer{
+  width: 130%;
+  left: -1em;
+}
+
+}
+
+@media (max-width: 645px) {
+
+.container {
+  display: grid;
+  grid-gap: 2.2em;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  position: relative;
+  top: 500px;
+  left: 50px;
+  /* justify-content: space-between; */
+}
+
+footer{
+  width: 130%;
+  left: -1em;
+}
 }
 
 
+/* last mobile view */
+
+
+@media (max-width: 535px) {
+ 
+
+body{
+  overflow-x: hidden;
+}
+
+
+.image-info {
+    position: relative;
+    left: 150px;
+    width: 150px;
+    height: auto;
+    top: 200px;
+
+}
+
+
+.buttons-container {
+
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(100px, 0.1em));
+  grid-gap: 0.5em;
+  width: 400px;
+  position: relative;
+  top: 220px;
+  left: 70px;
+
+}
+
+
+.serv {
+  display: flex;
+  position: relative;
+  font-family: "San Francisco", sans-serif;
+  text-align: center;
+  font-size: 18px;
+  top: 500px;
+  /* left: 400px; */
+  margin-left: 0%;
+  margin-top: 10%;
+
+
+}
+
+.container {
+  display: grid;
+  grid-gap: 2.2em;
+  grid-template-columns: repeat(auto-fit, minmax(320px, 80px));
+  position: relative;
+  top: 500px;
+  left: 90px;
+  /* justify-content: space-between; */
+}
+
+
+
+#contact-form{
+  position: relative;
+  top: 600px;
+/* float: left; */
+left: 8em;
+}
+
+footer{
+  width: 150%;
+  left: -1em;
+}
+
+}
+
+
+
+
+@media (max-width: 455px) {
+ 
+
+  body{
+    overflow-x: hidden;
+  }
+  
+  .both-logos{
+    left: 0em;
+  }
+
+  .nav {
+    left: 0em;
+  }
+
+  h1.name , h1.name2{
+    width: 30px;
+    font-size: 22px;
+    transform: translate(-1em,-5px);
+    transition: 0.3s;
+  }
+  
+  .shortbio {
+    font-family: "San Francisco", sans-serif;
+    text-align: left;
+    width: 13rem;
+    margin-left: 3%;
+    margin-top: 2.5%;
+    font-size: 11px;
+    position: relative;
+    left: 0;
+    z-index: 999;
+  
+  }
+  
+.pic {
+  position: absolute;
+  max-width: 350px;
+  height: auto;
+  transform: translate(35%, -60%);
+ 
+}
+
+
+.btn {
+  position: relative;
+  font-size: 21px;
+  padding: 20px;
+  left: 60px;
+  top: 60px;
+  border-radius: 30px;
+  font-family: "San Francisco", sans-serif;
+  text-align: left;
+}
+
+
+  .image-info {
+      position: relative;
+      left: 140px;
+      width: 150px;
+      height: auto;
+      top: 200px;
+  
+  }
+  
+  
+  .buttons-container {
+  
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(100px, 0.1em));
+    grid-gap: 0.5em;
+    width: 400px;
+    position: relative;
+    top: 220px;
+    left: 60px;
+  
+  }
+  
+  
+  .serv {
+    display: flex;
+    position: relative;
+    font-family: "San Francisco", sans-serif;
+    text-align: center;
+    font-size: 18px;
+    top: 500px;
+    left: 0em;
+    margin-left: 0%;
+    margin-top: 10%;
+  
+  
+  }
+  
+  .container {
+    display: grid;
+    grid-gap: 2.2em;
+    grid-template-columns: repeat(auto-fit, minmax(320px, 80px));
+    position: relative;
+    top: 500px;
+    left: 2em;
+    /* justify-content: space-between; */
+  }
+  
+  
+  
+  #contact-form{
+    position: relative;
+    top: 600px;
+  left: 3em;
+  min-width: 15em;
+  }
+  
+  footer{
+    width: 110%;
+    left: -1em;
+    overflow-x: hidden;
+  }
+
+  #back-to-top{
+    margin-right: 10%;
+    overflow-x: hidden;
+
+  }
+  
+  }
