--- a/about.css
+++ b/about.css
@@ -33,7 +33,7 @@ body {
   .about,
   .portfolio,
   .services,
-  .contact , .prjects{
+  .contact , .projects{
     
     /* align-items: center; */
     font-size: 20px;
