--- a/style.css
+++ b/style.css
@@ -317,18 +317,17 @@ textarea {
 }
 
 
-#back-to-top {
-  position: fixed;
-  float: right;
-  bottom: 20px;
-  right: 10px;
+/* #back-to-top {
+  position: absolute;
+  bottom: 0px;
+  left: 0px;
   padding: 10px;
-  border-radius: 5px;
+  border-radius: 50em;
   background-image: linear-gradient(to right,#3E5151 , #DECBA4);
 
 
   color: #fff;
-}
+} */
 
 
 
@@ -448,12 +447,12 @@ footer{
 /* sm */
 @media (max-width: 998px) {
  
-  .pic{
+  /* .pic{
     width: 400px;
     left: 0px;
     transition: 0.3s;
 
-  }
+  } */
 
   h1.name , h1.name2{
     width: 30px;
@@ -582,14 +581,14 @@ footer{
   
   }
   
-.pic {
-  position: absolute;
-  max-width: 400px;
-  height: auto;
-  transform: translate(50%, -60%);
- 
-}
 
+  .pic {
+    position: absolute;
+    max-width: 400px;
+    height: auto;
+    transform: translate(50%, -60%);
+   
+  }
 
 .btn {
   position: relative;
@@ -654,6 +653,16 @@ footer{
 }
 
 @media (max-width: 645px) {
+
+
+  .pic {
+    position: absolute;
+    max-width: 400px;
+    height: auto;
+    transform: translate(50%, -60%);
+   
+  }
+
 
 .container {
   display: grid;
@@ -753,18 +762,26 @@ footer{
  
 
   body{
+   width: 100vw;
     overflow-x: hidden;
   }
+ 
   
   .both-logos{
-    left: 0em;
+    max-width: 100vw;
+    left: -02em;
   }
 
   .nav {
-    left: 0em;
+    max-width: 100vw;
+
+    left: -4em;
+    
   }
 
   h1.name , h1.name2{
+    max-width: 100vw;
+
     width: 30px;
     font-size: 22px;
     transform: translate(-1em,-5px);
@@ -772,6 +789,8 @@ footer{
   }
   
   .shortbio {
+    max-width: 100vw;
+
     font-family: "San Francisco", sans-serif;
     text-align: left;
     width: 13rem;
@@ -788,26 +807,26 @@ footer{
   position: absolute;
   max-width: 350px;
   height: auto;
-  transform: translate(35%, -60%);
+  transform: translate(15%, -60%);
  
 }
 
 
 .btn {
   position: relative;
-  font-size: 21px;
-  padding: 20px;
+  max-width: 8em;
+  font-size: 12px;
+  padding: 10px;
   left: 60px;
   top: 60px;
   border-radius: 30px;
-  font-family: "San Francisco", sans-serif;
-  text-align: left;
+
 }
 
 
   .image-info {
       position: relative;
-      left: 140px;
+      left: 100px;
       width: 150px;
       height: auto;
       top: 200px;
@@ -823,23 +842,25 @@ footer{
     width: 400px;
     position: relative;
     top: 220px;
-    left: 60px;
+    left: 10px;
   
   }
   
   
   .serv {
-    display: flex;
     position: relative;
     font-family: "San Francisco", sans-serif;
     text-align: center;
-    font-size: 18px;
     top: 500px;
     left: 0em;
-    margin-left: 0%;
     margin-top: 10%;
+
   
   
+  }
+
+  .serv h2{
+    font-size: 26px;
   }
   
   .container {
@@ -848,8 +869,7 @@ footer{
     grid-template-columns: repeat(auto-fit, minmax(320px, 80px));
     position: relative;
     top: 500px;
-    left: 2em;
-    /* justify-content: space-between; */
+   left: 02em;
   }
   
   
@@ -858,19 +878,78 @@ footer{
     position: relative;
     top: 600px;
   left: 3em;
-  min-width: 15em;
+  /* min-width: 15em; */
+
   }
   
   footer{
-    width: 110%;
-    left: -1em;
-    overflow-x: hidden;
+    width: 100%;
+    left: 0em;
+    margin-right: 0px;
   }
 
-  #back-to-top{
-    margin-right: 10%;
-    overflow-x: hidden;
+ 
+  
+  }
+
+  @media (max-width: 400px) {
+
+
+    body{
+      overflow-x: hidden;
+    }
+    .nav {
+  
+      left: -2.3em;
+      transition: all ease 0.3s;
+      
+    }
+      
+  .serv {
+    position: relative;
+    font-family: "San Francisco", sans-serif;
+    text-align: center;
+    top: 500px;
+    left: 0em;
+    margin-top: 10%;
+
+    transition: all ease 0.3s;
+  
+  
+  }
+
+  .serv h2{
+    font-size: 20px;
+    transition: all ease 0.3s;
 
   }
   
+  .container {
+    display: grid;
+    grid-gap: 1.2em;
+    grid-template-columns: repeat(auto-fit, minmax(290px, 80px));
+    position: relative;
+    top: 500px;
+   left: 02em;
+   transition: all ease 0.3s;
+
+  }
+  
+  
+  
+  #contact-form{
+    position: relative;
+    top: 600px;
+  left: 3em;
+  /* min-width: 15em; */
+
+  }
+  
+  footer{
+    min-width: 120%;
+  }
+
+
+
+
   }
