--- a/contact.css
+++ b/contact.css
@@ -190,7 +190,7 @@ form {
     .about,
     .portfolio,
     .services,
-    .contact {
+    .contact , .projects {
     
       font-size: 16px;
       margin-top: 5em;
@@ -248,7 +248,7 @@ form {
         .about,
         .portfolio,
         .services,
-        .contact {
+        .contact , .projects {
         
           font-size: 14px;
           transition: all ease 0.3s;
