--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url(https://use.fontawesome.com/releases/v6.4.2/css/all.css);
+
 html{
   scroll-behavior: smooth;
 
@@ -136,7 +138,6 @@ h1.name:hover , h1.name2:hover {
 .btn:hover {
   color: rgb(255, 255, 255);
 }
-
 
 
 
@@ -360,14 +361,50 @@ footer img {
   justify-content: center; /* Center the content horizontally */
 }
 
+
+
+.footer-social a {
+  margin: 0 10px;
+  border-radius: 50%;
+  box-sizing: border-box;
+  background: #fff;
+  width: 3vw;
+  height: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-decoration: none;
+  transition: 0.5s;
+  background: rgba(0, 0, 0, 0);
+  color: var(--color);
+  font-size: 2.5em;
+  -webkit-box-reflect: below 5px linear-gradient(to bottom, rgba(0,0,0,0,0), rgba(0,0,0,0,4));
+
+}
+
+ 
+.footer-social a:hover{
+background: var(--color);
+color: #050801;
+box-shadow: 0 0 5px var(--color),
+  0 0 25px var(--color),
+  0 0 50px var(--color),
+  0 0 200px var(--color);
+
+}
+
+
+
+
 .footer-links a {
   color: #ffffff;
   text-decoration: none;
-  margin: 0 1rem; /* Add margin between the links */
+  font-size: 1.5em;
+  margin: 0 1rem; 
 }
 
 .footer-social a {
-  margin: 0 1rem; /* Add margin between the social icons */
+  margin: 0 1rem;
   margin-top: 2%;
 }
 
@@ -381,14 +418,14 @@ footer img {
 /* xl */
 @media (max-width: 1245px) {
   .both-logos {
-    margin-bottom: -180px; /* Add margin between logos and navigation for small screens */
+    margin-bottom: -180px;  
   }
 
   .nav {
-    flex-direction: row; /* Display links in a row for small screens */
-    justify-content: center; /* Align links to the left for small screens */
-    width: 80%; /* Ensure the links span the full width of the header */
-    padding: 10px 0; /* Add padding to the links for spacing */
+    flex-direction: row;  
+    justify-content: center;  
+    width: 80%; 
+    padding: 10px 0;  
     transform: translate(10%, -20%);
   }
 
@@ -401,27 +438,27 @@ footer img {
 @media (max-width: 1024px) {
 
   .header {
-    padding: 20px; /* Increase header padding */
+    padding: 20px;  
   }
 
   .nav {
-    font-size: 18px; /* Bump up nav font size */
+    font-size: 18px;  
   }
 
   .footer {
-    padding: 60px 0; /* Increase footer padding */ 
+    padding: 60px 0;  
   }
   
   .footer-links a {
-    margin: 0 1.5rem; /* Increase space between footer links */
+    margin: 0 1.5rem;  
   }
 
   .personalinfo {
-    font-size: 24px; /* Make personal info heading larger */
+    font-size: 24px;  
   }
 
   .container {
-    width: 500px; /* Widen container */
+    width: 500px;  
   }
 
 }
@@ -438,7 +475,7 @@ footer img {
   position: relative;
   top: 500px;
   left: 90px;
-  /* justify-content: space-between; */
+   
 }
 footer{
   width: 130%;
@@ -889,7 +926,11 @@ footer{
     left: 0em;
     margin-right: 0px;
   }
-
+  .footer-social a {
+    width: 3vw;
+    font-size: 1em;
+  
+  }
  
   
   }
@@ -945,6 +986,37 @@ footer{
   left: 3em;
   /* min-width: 15em; */
 
+  }
+  
+  
+  
+  
+
+
+  .footer-social a {
+    width: 3vw;
+    font-size: 1em;
+  
+  }
+  
+   
+  .footer-social a:hover{
+/*   
+  box-shadow: 0 0 1px var(--color),
+    0 0 25px var(--color),
+    0 0 50px var(--color),
+    0 0 200px var(--color);
+   */
+  }
+  
+  
+  
+  
+  .footer-links a {
+   
+    text-decoration: none;
+    font-size: 1.5em;
+    margin: 0 1rem; 
   }
   
   footer{
